objects/Legal_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Legal_Dept_Reviewer__c</fullName>
        <defaultValue>&quot;[State name of escalation attorney, if, any, who has reviewed this opinion.  This is mandatory in the U.S. for all deals with an overall risk rating of High or Very High.]&quot;</defaultValue>
        <label>Additional Legal Dept. Reviewer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Legal Issues</relationshipLabel>
        <relationshipName>Legal_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Content__c</fullName>
        <label>Risk Ratings</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Content__c</fullName>
        <label>HP&apos;s Response</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Recommendation__c</fullName>
        <defaultValue>&quot;[State whether you recommend or do not recommend and overall legal risk rating, based on your analysis of the risks in this opinion.                                                                                  The recommendation and legal risk rating assume that the mitigation strategies recommended by legal have been incorporated by the pursuit team in the bid.  If you do not recommend, summarize reasons.]&quot;</defaultValue>
        <label>Legal Recommendation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_times_HP_Response_Changed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field updates every time when HP Response Changed</description>
        <label>Number of times HP Response Changed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paragraph__c</fullName>
        <label>Customer Non Standard Positions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Make Risk Category in Sequence..</description>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Legal Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Risk_Category__c</columns>
        <columns>Sequence__c</columns>
        <columns>Agreement__c</columns>
        <columns>Paragraph__c</columns>
        <columns>Initial_Content__c</columns>
        <columns>Number_of_times_HP_Response_Changed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LI-{000000}</displayFormat>
        <label>Legal Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>